@startuml
left to right direction
skinparam packageStyle rectangle
skinparam nodesep 30
skinparam ranksep 40
skinparam linetype ortho
skinparam classAttributeIconSize 0

title Architecture Globale Asklepios : Modèle Complet & Optimisé

package "SaaS & Réseau" {
    class tenant {
        id: UnsignedBigInteger
        name: String
        type: String ('hospital', 'pharmacy_chain')
    }
    class pharmacy_branch {
        id: UnsignedBigInteger
        tenant_id: UnsignedBigInteger
        name: String
        type: String ('central_warehouse', 'retail_pos')
        address: String
    }
}

package "Catalogue & Tarification" {
    class article_category {
        id: UnsignedBigInteger
        tenant_id: UnsignedBigInteger
        parent_id: UnsignedBigInteger_optional
        name: String
    }
    class article {
        id: UnsignedBigInteger
        tenant_id: UnsignedBigInteger
        category_id: UnsignedBigInteger
        name: String
        barcode: String
        global_min_qty: float
        default_selling_price: float
        track_batches: Boolean
    }
    class branch_article {
        id: UnsignedBigInteger
        branch_id: UnsignedBigInteger
        article_id: UnsignedBigInteger
        special_selling_price: float_optional
        default_storage_location_id: UnsignedBigInteger_optional
        is_active: Boolean
    }
    class batch {
        id: UnsignedBigInteger
        article_id: UnsignedBigInteger
        batch_number: String
        expiry_date: Date_optional
        purchase_price: float
    }
}

package "Approvisionnement & Retours" {
    class provider {
        id: UnsignedBigInteger
        tenant_id: UnsignedBigInteger
        name: String
        type: String
    }
    class purchase_order {
        id: UnsignedBigInteger
        tenant_id: UnsignedBigInteger
        provider_id: UnsignedBigInteger
        destination_branch_id: UnsignedBigInteger
        status: String
        total_amount: float
    }
    class purchase_order_line {
        id: UnsignedBigInteger
        purchase_order_id: UnsignedBigInteger
        article_id: UnsignedBigInteger
        qty_ordered: float
        qty_received: float
        unit_cost: float
    }
    class purchase_return {
        id: UnsignedBigInteger
        tenant_id: UnsignedBigInteger
        provider_id: UnsignedBigInteger
        source_branch_id: UnsignedBigInteger
        purchase_order_id: UnsignedBigInteger_optional
        status: String
        return_date: Date
    }
    class purchase_return_line {
        id: UnsignedBigInteger
        purchase_return_id: UnsignedBigInteger
        batch_id: UnsignedBigInteger
        qty_returned: float
        reason: String
    }
}

package "Inventaire & Logistique" {
    class storage_location {
        id: UnsignedBigInteger
        branch_id: UnsignedBigInteger
        aisle: String
        shelf: String
        code: String
    }
    class stock {
        id: UnsignedBigInteger
        branch_id: UnsignedBigInteger
        batch_id: UnsignedBigInteger
        storage_location_id: UnsignedBigInteger_optional
        qty: float
    }
    class stock_movement {
        id: UnsignedBigInteger
        branch_id: UnsignedBigInteger
        batch_id: UnsignedBigInteger
        storage_location_id: UnsignedBigInteger_optional
        qty: float
        type: String
        reference_type: String 
        reference_id: UnsignedBigInteger
    }
}

package "Flotte & Transferts" {
    class driver {
        id: UnsignedBigInteger
        tenant_id: UnsignedBigInteger
        name: String
        phone: String
        is_active: Boolean
    }
    class vehicle {
        id: UnsignedBigInteger
        tenant_id: UnsignedBigInteger
        registration_number: String
        model: String
        is_active: Boolean
    }
    class stock_transfer {
        id: UnsignedBigInteger
        source_branch_id: UnsignedBigInteger
        destination_branch_id: UnsignedBigInteger
        driver_id: UnsignedBigInteger_optional
        vehicle_id: UnsignedBigInteger_optional
        status: String
        shipped_at: Datetime_optional
        received_at: Datetime_optional
    }
    class stock_transfer_line {
        id: UnsignedBigInteger
        stock_transfer_id: UnsignedBigInteger
        batch_id: UnsignedBigInteger
        qty_requested: float
        qty_shipped: float
    }
}

package "Audits Physiques" {
    class inventory {
        id: UnsignedBigInteger
        branch_id: UnsignedBigInteger
        user_id: UnsignedBigInteger
        status: String
        execution_date: Date
        notes: Text_optional
    }
    class inventory_line {
        id: UnsignedBigInteger
        inventory_id: UnsignedBigInteger
        batch_id: UnsignedBigInteger
        storage_location_id: UnsignedBigInteger_optional
        system_qty: float
        physical_qty: float
        discrepancy: float
    }
}

package "Caisse & Ventes" {
    class cash_register {
        id: UnsignedBigInteger
        branch_id: UnsignedBigInteger
        name: String
        status: String
    }
    class cash_register_session {
        id: UnsignedBigInteger
        cash_register_id: UnsignedBigInteger
        user_id: UnsignedBigInteger
        opened_at: Datetime
        closed_at: Datetime_optional
        opening_balance: float
        closing_balance: float
    }
    class pos_sale {
        id: UnsignedBigInteger
        branch_id: UnsignedBigInteger
        session_id: UnsignedBigInteger
        total_amount: float
        payment_method: String
        created_at: Datetime
    }
    class pos_sale_item {
        id: UnsignedBigInteger
        sale_id: UnsignedBigInteger
        batch_id: UnsignedBigInteger
        qty: float
        unit_price: float
        sub_total: float
    }
}

package "Trésorerie" {
    class bank_account {
        id: UnsignedBigInteger
        tenant_id: UnsignedBigInteger
        bank_name: String
        account_number: String
        balance: float
    }
    class bank_deposit {
        id: UnsignedBigInteger
        branch_id: UnsignedBigInteger
        bank_account_id: UnsignedBigInteger
        user_id: UnsignedBigInteger
        expected_amount: float
        deposited_amount: float
        expense_amount: float
        expense_justification: Text_optional
        status: String
        deposit_date: Date
    }
}
 
' --- RELATIONS STRUCTURELLES ---
tenant "1" *-- "*" pharmacy_branch
tenant "1" *-- "*" bank_account
tenant "1" *-- "*" driver
tenant "1" *-- "*" vehicle
tenant "1" *-- "*" article_category
tenant "1" *-- "*" article

article_category "1" *-- "*" article_category
article_category "1" *-- "*" article
article "1" *-- "*" batch

pharmacy_branch "1" *-- "*" storage_location
pharmacy_branch "1" *-- "*" stock
batch "1" *-- "*" stock
storage_location "1" <-- "*" stock

pharmacy_branch "1" *-- "*" branch_article
article "1" *-- "*" branch_article
storage_location "1" <-- "*" branch_article

' --- APPROVISIONNEMENT ---
provider "1" *-- "*" purchase_order
purchase_order "1" *-- "1..*" purchase_order_line
article "1" <-- "*" purchase_order_line

provider "1" *-- "*" purchase_return
purchase_order "1" <-- "*" purchase_return
purchase_return "1" *-- "1..*" purchase_return_line
batch "1" <-- "*" purchase_return_line
pharmacy_branch "1" <-- "*" purchase_return

' --- LOGISTIQUE ---
driver "1" <-- "*" stock_transfer
vehicle "1" <-- "*" stock_transfer
pharmacy_branch "1" <-- "*" stock_transfer : part de
pharmacy_branch "1" <-- "*" stock_transfer : arrive à
stock_transfer "1" *-- "1..*" stock_transfer_line
batch "1" <-- "*" stock_transfer_line

' --- INVENTAIRES ---
pharmacy_branch "1" *-- "*" inventory
inventory "1" *-- "*" inventory_line
batch "1" <-- "*" inventory_line
storage_location "1" <-- "*" inventory_line

' --- CAISSE ---
pharmacy_branch "1" *-- "*" cash_register
cash_register "1" *-- "*" cash_register_session
cash_register_session "1" *-- "*" pos_sale
pos_sale "1" *-- "1..*" pos_sale_item
batch "1" <-- "*" pos_sale_item

' --- TRÉSORERIE ---
pharmacy_branch "1" *-- "*" bank_deposit
bank_account "1" <-- "*" bank_deposit

' --- TRAÇABILITÉ ---
stock_movement "*" --> "1" pharmacy_branch
stock_movement "*" --> "1" batch
storage_location "1" <-- "*" stock_movement

@enduml